# Bridge

./: .gitignore  .gitleaks.toml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: bridge-desktop-release.yml  windows-desktop.yml
adapters/panda-burn/: adapter.manifest.json  command-contract.json  package.json
adapters/panda-burn/local-tools/backend/burn-chat/: Cargo.toml  README.md  claude-agent-sdk-runner.mjs  claude-agent-sdk-session-ops.mjs  package-lock.json  package.json
adapters/panda-burn/local-tools/backend/burn-chat/src/: agent_session.rs  agent_session_history.rs  agent_session_parse.rs  agent_source.rs  agent_source_catalog.rs  claude_agent_sdk.rs  codex_app_server.rs  display.rs  drivers.rs  error.rs  json_text.rs  lib.rs  main.rs  source_cli.rs  source_cli_args.rs  source_commands.rs
adapters/panda-burn/local-tools/backend/burn-chat/src/display/: blocks.rs  claude.rs  codex.rs  git.rs  utils.rs
adapters/panda-burn/local-tools/backend/burn-chat/tests/: agent_session_cli.rs  agent_source_cli.rs  agent_source_cli_codex_options.rs  agent_source_cli_negative.rs  display_enrichment.rs  parse_claude_cli.rs  parse_codex.rs
adapters/panda-burn/local-tools/backend/burn-chat/tests/support/: mod.rs
apps/cloud-worker/: package.json  wrangler.example.toml  wrangler.selfhost.example.toml
apps/connector-cli/: package.json
apps/desktop/: Cargo.toml  package.json
apps/desktop/assets/: PandaBridge.icns
apps/desktop/src/: authorization.rs  captoken.rs  catalog.rs  commands.rs  headless.rs  main.rs  model_state.rs  relay.rs  settings.rs  tests.rs  updates.rs  verify.rs  window.rs
apps/desktop/src/connector/: codex.rs  data.rs  fs.rs  mod.rs  registry.rs  shell.rs  syllo.rs
apps/desktop/src/connector/sandbox/: macos.rs  mod.rs  noop.rs  profiles.rs
apps/desktop/src/relay/: adapters.rs  connections.rs  polling.rs  realtime.rs  worker.rs
apps/desktop/src/settings/: capabilities.rs  credentials_store.rs  device_info.rs  http.rs  profiles.rs  startup.rs  storage.rs  util.rs
apps/desktop/ui/: about.js  app.js  index.html  styles.css
apps/web-chat/: package.json
docs/: burn-agent-usage-ledger.md  desktop-ai-cli.md  desktop-signing.md  desktop-user-guide.md  personal-selfhost-docker-pairing.md  product-integration.md  sdk-calling-guide.md  self-hosting.md
examples/bridge-notes/: README.md  package.json
examples/minimal-caller/: README.md  run-local.mjs
examples/relay-local-control/: README.md  adapter.mjs  blackbox.mjs  run-local.mjs
examples/sdk-call-examples/: README.md  run-local.mjs
release/: desktop.json
scripts/: build-web.mjs  check-commit.sh  dev-local-syllo.mjs  fake-source-matrix.mjs  pandart-local-chat.mjs  serve-web.mjs  sync-sdk.mjs
scripts/desktop/: build-icon.mjs  install-macos.mjs  macos-bundle.mjs  managed-adapters.mjs  package-macos.mjs  package-windows.mjs  release-contract.mjs
scripts/selfhost/: bridge-server.mjs
scripts/verify/: account-password-e2e.mjs  adapter-syllo.mjs  authorization-logout-boundary.mjs  bridge-architecture.mjs  bridge-full-access-policy.mjs  bridge-notes-dogfood.mjs  bridge-performance-samples.mjs  browser-smoke.mjs  cloud-concurrency-matrix.mjs  cloud-smoke.mjs  concurrency-matrix.mjs  desktop-ai-cli-control.mjs  desktop-ai-control.mjs  desktop-lite-smoke.mjs  desktop-server-list-interaction.mjs  desktop-ui-smoke.mjs  desktop-windows.mjs  env-contract.mjs  evidence-redaction.mjs  fake-source-matrix.mjs  installed-desktop-e2e.mjs  local-smoke.mjs  managed-adapters.mjs  mobile-browser-smoke.mjs  multi-account-realtime-fanout.mjs  multi-source-authorization.mjs  native-sdk-parity.mjs  open-source-hygiene.mjs  panda-burn-abnormal-guardian.mjs  panda-burn-local-runtime.mjs  panda-burn-usage-ledger.mjs  pandart-real-codex-browser.mjs  performance-matrix.mjs  productized-onboarding.mjs  real-codex-queue.mjs  relay-backpressure.mjs  relay-boundary.mjs  relay-e2ee.mjs  sdk-docs.mjs  sdk-release.mjs  (+7 more)
(+164 files in other folders)
