[package]
name = "burn-chat"
version = "0.1.0"
edition = "2021"

[lib]
name = "burn_chat"
path = "src/lib.rs"

[[bin]]
name = "burn-chat"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.102"
clap = "=4.6.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
burn-monitor = { path = "../burn-monitor" }
